--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.svg" />
     <link rel="mask-icon" href="/mask-icon.svg" color="#f97316" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- PWA iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="PLANIZZA" />
+    
     <title>J'ai FAIM !</title>
   </head>
   <body>
